[gd_scene load_steps=5 format=3 uid="uid://d1t0ebe2wjepr"]

[ext_resource type="Material" uid="uid://dc3q277rsy30k" path="res://src/shaders/shader_materials/blur_material.tres" id="1_h5xah"]
[ext_resource type="Theme" uid="uid://o03o6n842mwp" path="res://addons/theme.tres" id="2_7aaxd"]
[ext_resource type="Texture2D" uid="uid://c0o4nh37dbseu" path="res://assets/materials/textures/white.png" id="3_pvg0t"]
[ext_resource type="Script" path="res://scenes/user_interfaces/pause_menu/pause_menu.gd" id="4_xmmvw"]

[node name="PauseMenu" type="TextureRect"]
z_index = 10
material = ExtResource("1_h5xah")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7aaxd")
texture = ExtResource("3_pvg0t")
expand_mode = 1
script = ExtResource("4_xmmvw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseOptions" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/PauseOptions"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "Resume"

[node name="Options" type="Button" parent="CenterContainer/PauseOptions"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "Options"

[node name="Menu" type="Button" parent="CenterContainer/PauseOptions"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = "Menu"

[node name="Quit" type="Button" parent="CenterContainer/PauseOptions"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="GraphicsOptions" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="GlobalIllumination" type="CheckButton" parent="CenterContainer/GraphicsOptions"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Global Illumination"

[node name="Ambient Occlusion" type="CheckButton" parent="CenterContainer/GraphicsOptions"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Ambient Occlusion"

[node name="Fog" type="CheckButton" parent="CenterContainer/GraphicsOptions"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Fog"

[node name="SunShadows" type="CheckButton" parent="CenterContainer/GraphicsOptions"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Sun Shadows"

[node name="HighFidelityShadows" type="CheckButton" parent="CenterContainer/GraphicsOptions"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "High Fidelity Shadows"

[node name="HighFidelityTrees" type="CheckButton" parent="CenterContainer/GraphicsOptions"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "High Fidelity Trees"

[node name="Back" type="Button" parent="CenterContainer/GraphicsOptions"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "Back"

[connection signal="pressed" from="CenterContainer/PauseOptions/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/PauseOptions/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/PauseOptions/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CenterContainer/PauseOptions/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="CenterContainer/GraphicsOptions/GlobalIllumination" to="." method="_on_global_illumination_toggled"]
[connection signal="toggled" from="CenterContainer/GraphicsOptions/Ambient Occlusion" to="." method="_on_ambient_occlusion_toggled"]
[connection signal="toggled" from="CenterContainer/GraphicsOptions/Fog" to="." method="_on_fog_toggled"]
[connection signal="toggled" from="CenterContainer/GraphicsOptions/SunShadows" to="." method="_on_sun_shadows_toggled"]
[connection signal="toggled" from="CenterContainer/GraphicsOptions/HighFidelityShadows" to="." method="_on_high_fidelity_shadows_toggled"]
[connection signal="toggled" from="CenterContainer/GraphicsOptions/HighFidelityTrees" to="." method="_on_high_fidelity_trees_toggled"]
[connection signal="pressed" from="CenterContainer/GraphicsOptions/Back" to="." method="_on_back_pressed"]
